--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,8 +1,7 @@
 
 html, body {
-  background-color : #e4f3f4;
+  background-color : #212121;
   margin: 0;
   padding: 0;
   min-height: 100vh;
-  min-width: 100vw;
 }
