--- a/client/src/getUser/User.css
+++ b/client/src/getUser/User.css
@@ -1,7 +1,7 @@
 .userTable {
     width: 50%;
     margin: 100px auto;
-    background-color: white;
+    background-color: whitesmoke;
     padding: 50px;
     border-radius: 20px;
     box-shadow: 1px 1px 10px rgba(0, 0, 0, 0.1);
@@ -24,4 +24,9 @@
 }
 .actionButtons button{
     margin: 0 7px;
+}
+
+.noData {
+    text-align: center;
+    margin-top: 20px;
 }
